--- a/portfolio-site/index.html
+++ b/portfolio-site/index.html
@@ -1,13 +1,31 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/custom.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Brian-Njuguna</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+<meta charset="UTF-8" />
+<link rel="icon" type="image/png" href="/favicon.png" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+<title>Brian Njuguna - Fullstack Developer | Django & React Specialist</title>
+
+<meta name="description" content="Kenyan fullstack developer building web applications with Django and React. Specialized in payment integrations and API development. Available for freelance projects." />
+
+<meta name="keywords" content="fullstack developer Kenya, Django developer, React developer, API development, Python developer Nairobi" />
+
+<!-- Open Graph / Social Media -->
+<meta property="og:type" content="website" />
+<meta property="og:title" content="Brian Njuguna - Fullstack Developer" />
+<meta property="og:description" content="Building secure, scalable web applications with Django and React. Available for freelance work." />
+<meta property="og:image" content="/og-image.png" />
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Brian Njuguna - Fullstack Developer" />
+<meta name="twitter:description" content="Building secure, scalable web applications with Django and React." />
+
+<link rel="canonical" href="https://brian.cnbcode.com" />
+</head>
+<body>
+<div id="root"></div>
+<script type="module" src="/src/main.tsx"></script>
+</body>
 </html>
