feat: Complete portfolio overhaul - projects, SEO, and contact updates
- Replaced voting system with GitItDone automation tool
- Updated payment project to Multi-Provider Payment API
- Added professional footer with logo, contact info, and CnB Code link
- Implemented WhatsApp contact form with pre-filled messages
- Fixed image loading with proper imports and TypeScript declarations
- Added comprehensive SEO: meta tags, Open Graph, JSON-LD structured data
- Created sitemap.xml for search engine indexing
- Updated Hero, About, and Now sections with confident, authentic copy
- Fixed social sidebar to support both Lucide icons and image imports
- Improved accessibility with ARIA labels and semantic HTML throughout

--- a/portfolio-site/index.html
+++ b/portfolio-site/index.html
@@ -2,27 +2,55 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<link rel="icon" type="image/png" href="/favicon.png" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-<title>Brian Njuguna - Fullstack Developer | Django & React Specialist</title>
-
-<meta name="description" content="Kenyan fullstack developer building web applications with Django and React. Specialized in payment integrations and API development. Available for freelance projects." />
-
-<meta name="keywords" content="fullstack developer Kenya, Django developer, React developer, API development, Python developer Nairobi" />
+<title>Brian Njuguna | Fullstack Developer - Python, Django & React</title>
+<meta name="description" content="Building production systems and payment infrastructure. Python & React developer running CnB Code agency, shipping real solutions for businesses. Available for projects and opportunities." />
+<meta name="keywords" content="Brian Njuguna, fullstack developer, Python developer Kenya, Django developer, React TypeScript, payment systems, M-Pesa integration, CnB Code, developer Nairobi" />
 
 <!-- Open Graph / Social Media -->
 <meta property="og:type" content="website" />
-<meta property="og:title" content="Brian Njuguna - Fullstack Developer" />
-<meta property="og:description" content="Building secure, scalable web applications with Django and React. Available for freelance work." />
-<meta property="og:image" content="/og-image.png" />
+<meta property="og:url" content="https://brian.cnbcode.com" />
+<meta property="og:title" content="Brian Njuguna - Developer Portfolio" />
+<meta property="og:description" content="Fullstack developer building payment systems, automation tools, and production applications with Python and React." />
+<meta property="og:image" content="https://brian.cnbcode.com/og-image.png" />
+<meta property="og:site_name" content="Brian Njuguna Portfolio" />
 
 <!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Brian Njuguna - Fullstack Developer" />
-<meta name="twitter:description" content="Building secure, scalable web applications with Django and React." />
+<meta name="twitter:url" content="https://brian.cnbcode.com" />
+<meta name="twitter:title" content="Brian Njuguna - Developer Portfolio" />
+<meta name="twitter:description" content="Python & React developer. Payment systems, APIs, production code." />
+<meta name="twitter:image" content="https://brian.cnbcode.com/og-image.png" />
 
+<!-- Additional SEO -->
+<meta name="author" content="Brian Njuguna" />
+<meta name="robots" content="index, follow" />
 <link rel="canonical" href="https://brian.cnbcode.com" />
+
+<!-- Structured Data (JSON-LD) -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Brian Njuguna",
+  "url": "https://brian.cnbcode.com",
+  "email": "hello@brian.cnbcode.com",
+  "jobTitle": "Fullstack Developer",
+  "description": "Fullstack developer specializing in Python, Django, React, and payment systems. Founder of CnB Code agency.",
+  "worksFor": {
+    "@type": "Organization",
+    "name": "CnB Code",
+    "url": "https://cnbcode.com"
+  },
+  "sameAs": [
+    "https://github.com/guy-with-a-cool-terminal",
+    "https://linkedin.com/in/brian-njuguna-80734b242",
+    "https://cnbcode.com"
+  ],
+  "knowsAbout": ["Python", "Django", "React", "TypeScript", "Payment Systems", "API Development", "M-Pesa Integration", "Business Automation"]
+}
+</script>
 </head>
 <body>
 <div id="root"></div>
